--- a/VortexTools.html
+++ b/VortexTools.html
@@ -365,12 +365,12 @@
                 <div class="options-grid">
                     <div class="input-group">
                         <label for="profileName">Nama Profil</label>
-                        <input type="text" id="profileName" placeholder="Nama" value="Selax X7">
+                        <input type="text" id="profileName" placeholder="Nama" value="Vortex AI">
                     </div>
                     
                     <div class="input-group">
                         <label for="username">Username</label>
-                        <input type="text" id="username" placeholder="Username" value="@selaxx7">
+                        <input type="text" id="username" placeholder="Username" value="@VortexClient4">
                     </div>
                     
                     <div class="input-group">
